# EES

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EES  EES.cbp  Makefile  README.md  cmake_install.cmake  project-responsibilities  website-text.md
.cmake/api/v1/reply/: cache-v2-a8375866b2f4194759c9.json  cmakeFiles-v1-e2c6ed8fbc93defc9484.json  codemodel-v2-868c83566ef3979aab75.json  codemodel-v2-fee006dea8e476a221aa.json  index-2022-06-15T20-51-39-0363.json  index-2022-06-18T12-08-12-0542.json  target-EES-Debug-64e2f2b4ab824920dc3a.json  target-EES-Debug-6bc783da0ed792ff6e4b.json
Controller/: controller.cpp  controller.h
NXT/Demos/BluetoothDemo/: Makefile  bluetooth.c  bluetooth.oil
NXT/Demos/HelloWorldDemo/: Makefile  helloworld.c
NXT/Demos/MotorDemo/: Makefile  luca.txt  motor.c  motor.oil
NXT/MainRoutine/: .gitignore  Makefile  bluetooth.c  duties.c  duties.h  luca.txt  mainRoutine.c  mainRoutine.oil  mainRoutine3.c  mainRoutine3.h  mainRoutine3.oil  mainRoutine_old_many_tasks.c  mainRoutine_old_many_tasks.oil  mainTask.c  mainTask.h  motor_helper.c
NXT/src/: Makefile  bluetooth.c  bluetooth_module.c  bluetooth_module.h  mainRoutine.c  mainRoutine.oil  motor_helper.h
RASPI/: BluetoothService.cpp  BluetoothService.h  CMakeLists.txt  Makefile  client.c  client.cpp  client.h
RASPI/BluetoothService/: BluetoothService.cpp  BluetoothService.h
RASPI/Controller/: controller.cpp  controller.h
RASPI/colorDetection/: colordetection.cpp  colordetection.h
RASPI/colorDetection/tests/: CMakeLists.txt  test_colordetection.cpp
RP/: scanner.c
colorDetection/: CMakeLists.txt  colordetection.cpp  colordetection.h  colordetection.py  colordetectionFirstTest.py  test_colordetection.cpp  test_colordetection.h
colorDetection/tests/: CMakeLists.txt  test_colordetection.cpp  test_colordetection.h
nxtOsek-controller/: helloworld.oil
website/: website-text.md
